<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="144dp"
        android:src="@drawable/fish"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/register"
        android:cropToPadding="false"
        android:duplicateParentState="false"
        android:scaleType="centerInside"
        android:src="@drawable/plused"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/help"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/enter"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/free_icon_font_interrogation_3916693"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/free_icon_font_user_3917688"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="322dp"
        android:layout_height="58dp"
        android:layout_marginBottom="36dp"
        android:text="@string/enter_agree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register_btn"
        android:onClick="registerClicked"
        app:backgroundTint="@color/PRIMARY"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_name"
        app:guidelineUseRtl="false"
        android:hint="Underline color change"
        android:backgroundTint="@color/SECONDARY"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_surname"
        app:guidelineUseRtl="false"
        android:hint="Underline color change"
        android:backgroundTint="@color/SECONDARY"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Underline color change"
        android:backgroundTint="@android:color/holo_red_light"
        android:inputType="textPersonName"
        android:text="@string/enter_phone"
        app:guidelineUseRtl="false"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>