<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageButton
        android:id="@+id/btnpizza"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:onClick="goToChats"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_21_1393"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10px"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginBaseline="10px"
        app:srcCompat="@drawable/free_icon_font_interrogation_3916693"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10px"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginBaseline="10px"
        app:srcCompat="@drawable/free_icon_font_user_3917688"
        tools:ignore="SpeakableTextPresentCheck" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:fillViewport="true"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/_d3210dbc9de81f5a332b2ee23b2be3a" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/c1fdc613_resizedscaled_1020to574" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="301dp"
                android:layout_height="37dp"
                android:background="@color/PRIMARY"
                android:text="@string/button_people"
                app:backgroundTint="@color/PRIMARY"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommendations" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/_555502" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/_620820885_15_phonoteka_org_p_memi_bez_zadnego_fona_16" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    tools:srcCompat="@drawable/fish" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="301dp"
                android:layout_height="37dp"
                android:background="@color/PRIMARY"
                android:text="@string/recommends_button"
                app:backgroundTint="@color/PRIMARY"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:background="@color/SECONDARY"
                android:text="@string/recommends_button2"
                app:backgroundTint="@color/SECONDARY"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/avatars_ddznc7lwxp7igycc_ytkxrg_t500x500" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>